Changes Outcall creation from URL to URI